<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:background="@drawable/bg"
    tools:context=".LoanDetail">

    <android.support.v7.widget.CardView
        app:cardBackgroundColor="#D2FFFFFF"
        app:cardUseCompatPadding="true"
        app:cardElevation="@dimen/_6sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        android:layout_margin="@dimen/_6sdp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_110sdp"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/pro_of"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logo"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/loan_details"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pro_of"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:paddingStart="@dimen/_20sdp"
                android:paddingEnd="@dimen/_20sdp"
                android:text="@string/all_the_information_you_provide_is_encrypted_and_secured"
                android:textSize="@dimen/_14sdp" />

            <RelativeLayout
                android:id="@+id/reypay_rel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/roundconner_border"
                android:padding="@dimen/_5sdp">

                <ImageView
                    android:id="@+id/clock"
                    android:layout_width="@dimen/_17sdp"
                    android:layout_height="@dimen/_17sdp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:src="@drawable/clock" />

                <EditText
                    android:id="@+id/reypay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_toEndOf="@+id/clock"
                    android:background="@null"
                    android:digits="123456"
                    android:hint="@string/repayment_1_6_months"
                    android:inputType="number"
                    android:maxLength="1"
                    android:singleLine="true"
                    android:textColorHint="#666666"
                    android:textSize="@dimen/_12sdp"></EditText>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/amount_rel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/reypay_rel"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/roundconner_border"
                android:padding="@dimen/_5sdp">

                <TextView
                    android:id="@+id/ksh"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_17sdp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:text="@string/ksh"
                    android:textColor="@color/colorPrimary" />

                <EditText
                    android:id="@+id/amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_toEndOf="@+id/ksh"
                    android:background="@null"
                    android:hint="@string/enter_amount"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textColorHint="#666666"
                    android:textSize="@dimen/_12sdp"></EditText>
            </RelativeLayout>

            <Button
                android:id="@+id/request_loan_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_below="@+id/amount_rel"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_40sdp"
                android:background="@drawable/buttonroundconner"
                android:elevation="@dimen/_6sdp"
                android:text="@string/request_for_loan"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp" />

            <TextView
                android:id="@+id/already_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/request_loan_btn"
                android:layout_marginTop="@dimen/_20sdp"
                android:gravity="center"
                android:paddingStart="@dimen/_20sdp"
                android:paddingEnd="@dimen/_20sdp"
                android:text="@string/already_applied_check_loan_status"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_13sdp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/already_tv"
                android:layout_alignParentBottom="true">

                <Button
                    android:id="@+id/fag_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_33sdp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:background="@drawable/buttonroundconner"
                    android:elevation="@dimen/_6sdp"
                    android:text="@string/faq"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13sdp" />

                <Button
                    android:id="@+id/refer_earn_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_33sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:background="@drawable/buttonroundconner"
                    android:elevation="@dimen/_6sdp"
                    android:paddingStart="@dimen/_15sdp"
                    android:paddingEnd="@dimen/_15sdp"
                    android:text="@string/refer_earn"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13sdp" />
            </RelativeLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>



</ScrollView>